# Aegis-Security

./: .aegisignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml
benches/: scan_benchmark.rs
npm/: README.md  install.js  package.json  run.js
rules/javascript/: dangerously_set_html.yaml  exposed_stack.yaml  hardcoded_secret_js.yaml  insecure_jwt.yaml  js-specific.yaml  no_input_validation.yaml  nosql_injection.yaml  unsafe_eval.yaml  weak_crypto.yaml
rules/python/: assert_security.yaml  bare_except.yaml  broad_except.yaml  debug_true.yaml  default_secret_key.yaml  django_debug_true.yaml  hallucinated_import.yaml  hardcoded_secret.yaml  plaintext_password.yaml  requests_verify_false.yaml  sql_injection.yaml  subprocess_shell.yaml  unsafe_pickle.yaml  unsafe_yaml.yaml
rules/typescript/: auth_bypass.yaml  cors_wildcard.yaml  fake_validation.yaml  floating_promise.yaml  hardcoded_secret.yaml  insecure_fetch.yaml  missing_rate_limit.yaml  no_timeout.yaml  open_redirect.yaml  path_traversal.yaml  regex_injection.yaml  silent_fail.yaml  sql_injection_js.yaml  unhandled_rejection.yaml  unsafe_deserialization.yaml  unsafe_innerhtml.yaml
src/: engine.rs  lib.rs  main.rs  parser.rs  rule.rs
test-clean/src/: safe-app.ts
vulnerable-app/src/: app.py  index.ts
