[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow        = "=1.0.86"
clap          = { version = "=4.4.18", features = ["derive"] }
colored       = "=2.1.0"
serde         = { version = "=1.0.197", features = ["derive"] }
serde_json    = "=1.0.115"
serde_yaml    = "=0.9.34"
tree-sitter   = "=0.22.6"
tree-sitter-python     = "=0.21.0"
tree-sitter-typescript = "=0.21.2"
walkdir       = "=2.4.0"
indexmap       = "=2.2.6"
